feat(java11): set alerts for AS with Java11

--- a/.charts/tink-backend-aggregation-java11/templates/alerts.yaml
+++ b/.charts/tink-backend-aggregation-java11/templates/alerts.yaml
@@ -2,7 +2,7 @@
 kind: RuleGroup
 apiVersion: monitoring.tink.se/v1
 metadata:
-  name: alerts
+  name: alerts-java11
   namespace: aggregation
 spec:
   rules:
