feat(java11): set certificate for AS with Java11

--- a/.charts/tink-backend-aggregation-java11/templates/deployment.yaml
+++ b/.charts/tink-backend-aggregation-java11/templates/deployment.yaml
@@ -414,8 +414,8 @@ spec:
           mountPath: /tmp
         - name: altered-config-volume
           mountPath: /etc/tink
-        - name: client-certificate
-          mountPath: /etc/client-certificate
+        - name: client-certificate-java11
+          mountPath: /etc/client-certificate-java11
         - name: bnppf-cert
           mountPath: /etc/tink/bnppf-cert.p12
           subPath: bnppf-cert.p12
@@ -463,9 +463,9 @@ spec:
       - name: agents-config
         configMap:
           name: agents-config
-      - name: client-certificate
+      - name: client-certificate-java11
         secret:
-          secretName: client-certificate
+          secretName: client-certificate-java11
       - name: bnppf-cert
         secret:
           secretName: bnppf-cert
