--- a/.charts/tink-backend-aggregation-java11/templates/client-certificate.yaml
+++ b/.charts/tink-backend-aggregation-java11/templates/client-certificate.yaml
@@ -1,10 +1,10 @@
 apiVersion: "cert-manager.io/v1alpha2"
 kind: Certificate
 metadata:
-  name: client-certificate
+  name: client-certificate-java11
   namespace: aggregation
 spec:
-  secretName: client-certificate
+  secretName: client-certificate-java11
   keySize: 4096
   issuerRef:
     name: tink-internal-ca
