feat(java11): set config scripts for AS with Java11

--- a/.charts/tink-backend-aggregation-java11/templates/config-scripts.yaml
+++ b/.charts/tink-backend-aggregation-java11/templates/config-scripts.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: config-scripts
+  name: config-scripts-java11
   namespace: aggregation
 data:
   add-secrets.sh: |
