feat(java11): updated service for AS with Java11

--- a/.charts/tink-backend-aggregation-java11/templates/aggregation-config.yaml
+++ b/.charts/tink-backend-aggregation-java11/templates/aggregation-config.yaml
@@ -160,11 +160,11 @@ data:
     {{- end }}
 
     jaegerConfig:
-      serviceName: "aggregation-service"
+      serviceName: "aggregation-service-java11"
       sampleRate: 0.01
       tracingEnabled: true
 
     unleashConfig:
       apiUrl: http://unleash-api.unleash.svc.cluster.local:4242/api/
-      applicationName: aggregation-service
+      applicationName: aggregation-service-java11
       fetchFeatureToggleIntervals: 60
