--- a/.charts/tink-backend-aggregation-java11/templates/client-certificate.yaml
+++ b/.charts/tink-backend-aggregation-java11/templates/client-certificate.yaml
@@ -9,7 +9,7 @@ spec:
   issuerRef:
     name: tink-internal-ca
     kind: ClusterIssuer
-  commonName: aggregation-service.aggregation.svc.cluster.local
+  commonName: aggregation-service-java11.aggregation.svc.cluster.local
   usages:
     - server auth
     - client auth
