--- a/.charts/tink-backend-aggregation-java11/templates/networkpolicy.yaml
+++ b/.charts/tink-backend-aggregation-java11/templates/networkpolicy.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   podSelector:
     matchLabels:
-      app: aggregation-service
+      app: aggregation-service-java11
 
   egress:
   - {}
