--- a/.charts/tink-backend-aggregation-java11/templates/service.yaml
+++ b/.charts/tink-backend-aggregation-java11/templates/service.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: aggregation
 spec:
   selector:
-    app: aggregation-service
+    app: aggregation-service-java11
   ports:
   - port: 443
     targetPort: https-api
@@ -23,7 +23,7 @@ metadata:
   namespace: aggregation
 spec:
   selector:
-    app: aggregation-service
+    app: aggregation-service-java11
   ports:
   - port: 8080
     targetPort: http-api
