feat(java11): updated deployment for AS with Java11

--- a/.charts/tink-backend-aggregation-java11/templates/deployment.yaml
+++ b/.charts/tink-backend-aggregation-java11/templates/deployment.yaml
@@ -5,7 +5,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: aggregation
+  name: aggregation-java11
   namespace: aggregation
   labels:
     app: aggregation-service-java11
