feat(java11): updated agent config for AS with Java11

--- a/.charts/tink-backend-aggregation-java11/templates/agents-config.yaml
+++ b/.charts/tink-backend-aggregation-java11/templates/agents-config.yaml
@@ -5,7 +5,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: agents-config
+  name: agents-config-java11
   namespace: aggregation
 data:
   config.yml: |
