--- a/.charts/tink-backend-aggregation-java11/templates/networkpolicy.yaml
+++ b/.charts/tink-backend-aggregation-java11/templates/networkpolicy.yaml
@@ -2,7 +2,7 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: aggregation
+  name: aggregation-java11
   namespace: aggregation
 spec:
   podSelector:
