feat(java11): updated pod dist. budget for AS with Java11

--- a/.charts/tink-backend-aggregation-java11/templates/poddisruptionbudget.yaml
+++ b/.charts/tink-backend-aggregation-java11/templates/poddisruptionbudget.yaml
@@ -1,7 +1,7 @@
 apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
 metadata:
-  name: aggregation
+  name: aggregation-java11
   namespace: aggregation
 spec:
   maxUnavailable: 1
