feat(java11): updated secrets for AS with Java11

--- a/.charts/tink-backend-aggregation-java11/templates/secret.yaml
+++ b/.charts/tink-backend-aggregation-java11/templates/secret.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: aggregation-secrets
+  name: aggregation-secrets-java11
   namespace: aggregation
 type: Opaque
 data:
