feat(java11): updated nodeport service for AS with Java11

--- a/.charts/tink-backend-aggregation-java11/templates/service.yaml
+++ b/.charts/tink-backend-aggregation-java11/templates/service.yaml
@@ -19,7 +19,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: aggregation-nodeport
+  name: aggregation-nodeport-java11
   namespace: aggregation
 spec:
   selector:
