--- a/.charts/tink-backend-aggregation-java11/templates/serviceaccount.yaml
+++ b/.charts/tink-backend-aggregation-java11/templates/serviceaccount.yaml
@@ -4,7 +4,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: aggregation
+  name: aggregation-java11
   namespace: aggregation
 ---
 apiVersion: rbac.authorization.k8s.io/v1
