feat(java11): added deps for Java11

--- a/src/aggregation/fake_aggregation_controller/src/main/java/se/tink/backend/fake_aggregation_controller/BUILD
+++ b/src/aggregation/fake_aggregation_controller/src/main/java/se/tink/backend/fake_aggregation_controller/BUILD
@@ -15,6 +15,8 @@ java_library(
         "//third_party:lombok_plugin",
         "//third_party:org_slf4j_slf4j_api",
         "@aggregation//:org_projectlombok_lombok",
+        "@aggregation//:javax_xml_bind_jaxb_api",
+        "@aggregation//:org_glassfish_jaxb_jaxb_runtime",
     ],
 )
 
