feat(java11): start using Java11 for integration service
it is not used so it cannot harm anyway

--- a/src/integration/service/BUILD
+++ b/src/integration/service/BUILD
@@ -67,7 +67,7 @@ pkg_tar(
 
 container_image(
     name = "docker",
-    base = "@openjdk_jdk8//image",
+    base = "@distroless_java_11//image",
     tags = ["manual"],
     tars = [
         ":bin_tar",
