--- a/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/demo/banks/customsupplemental/BUILD
+++ b/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/demo/banks/customsupplemental/BUILD
@@ -1,3 +1,5 @@
+load("@rules_java//java:defs.bzl", "java_library")
+
 java_library(
     name = "customsupplemental",
     srcs = glob(["**/*.java"]),
