--- a/src/integration/lib/src/main/java/se/tink/backend/aggregation/compliance/customer_restrictions/BUILD
+++ b/src/integration/lib/src/main/java/se/tink/backend/aggregation/compliance/customer_restrictions/BUILD
@@ -1,3 +1,5 @@
+load("@rules_java//java:defs.bzl", "java_library")
+
 java_library(
     name = "customer_restrictions",
     srcs = glob(["*.java"]),
