--- a/src/integration/service/BUILD
+++ b/src/integration/service/BUILD
@@ -1,9 +1,10 @@
-load("@rules_pkg//:pkg.bzl", "pkg_tar")
 load(
     "@io_bazel_rules_docker//container:container.bzl",
     "container_image",
     "container_push",
 )
+load("@rules_java//java:defs.bzl", "java_binary")
+load("@rules_pkg//:pkg.bzl", "pkg_tar")
 
 java_binary(
     name = "integration",
