--- a/src/libraries/credentials-persistence/BUILD
+++ b/src/libraries/credentials-persistence/BUILD
@@ -1,3 +1,5 @@
+load("@rules_java//java:defs.bzl", "java_library")
+
 java_library(
     name = "credentials-persistence",
     srcs = glob(["*.java"]),
