style: Format with buildifier

--- a/src/libraries/console_json_logger/BUILD
+++ b/src/libraries/console_json_logger/BUILD
@@ -1,3 +1,5 @@
+load("@rules_java//java:defs.bzl", "java_library")
+
 java_library(
     name = "console_json_logger",
     srcs = glob(["src/main/**/*.java"]),
