--- a/src/libraries/creditsafe_consumer_monitoring/BUILD
+++ b/src/libraries/creditsafe_consumer_monitoring/BUILD
@@ -1,3 +1,5 @@
+load("@rules_java//java:defs.bzl", "java_library")
+
 java_library(
     name = "creditsafe_consumer_monitoring",
     srcs = glob(["src/main/java/**/*.java"]),
