style: Format with buildifier

--- a/src/libraries/dropwizard_utils/BUILD
+++ b/src/libraries/dropwizard_utils/BUILD
@@ -1,3 +1,5 @@
+load("@rules_java//java:defs.bzl", "java_library")
+
 java_library(
     name = "dropwizard_utils",
     srcs = ["@tink_backend//src/libraries/dropwizard_utils:dropwizard_utils_srcjar"],
