--- a/src/libraries/edi_client/BUILD
+++ b/src/libraries/edi_client/BUILD
@@ -1,3 +1,5 @@
+load("@rules_java//java:defs.bzl", "java_binary")
+
 java_binary(
     name = "issue",
     srcs = glob(["src/main/java/**/*.java"]),
