--- a/.charts/tink-backend-aggregation-java11/templates/service.yaml
+++ b/.charts/tink-backend-aggregation-java11/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: aggregation
+  name: aggregation-java11
   namespace: aggregation
 spec:
   selector:
