fix(java11): fixed certificate for AS with Java11

--- a/.charts/tink-backend-aggregation-java11/templates/client-certificate.yaml
+++ b/.charts/tink-backend-aggregation-java11/templates/client-certificate.yaml
@@ -4,7 +4,7 @@ metadata:
   name: client-certificate-java11
   namespace: aggregation
 spec:
-  secretName: client-certificate-java11
+  secretName: client-certificate
   keySize: 4096
   issuerRef:
     name: tink-internal-ca
