build: Set json format packaging to that of tink-backend

--- a/tools/format/BUILD
+++ b/tools/format/BUILD
@@ -4,16 +4,9 @@ multirun(
     name = "fmt",
     commands = [
         "//tools/format/java:format-java-diff",
-        "//tools/format:format-json-diff",
+        "//tools/format/json:format-json-diff",
         "//tools/format/bazel:format-build-files",
     ],
     parallel = True,
-    visibility = ["//:__pkg__"],
-)
-
-sh_binary(
-    name = "format-json-diff",
-    srcs = [":format-json-diff.sh"],
-    data = [":jsonformat.py"],
     visibility = ["//:__pkg__"],
 )
