--- a/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/es/openbanking/openbank/BUILD
+++ b/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/es/openbanking/openbank/BUILD
@@ -10,6 +10,8 @@ java_library(
         "//src/integration/api/src/main/java/se/tink/backend/agents/rpc",
         "//src/integration/credentials:service",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/agentcapabilities",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/consent",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/consent/generators/serviceproviders/redsys",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/contexts/agent",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/configuration/agentsservice",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/agents/componentproviders",
@@ -20,5 +22,6 @@ java_library(
         "//src/libraries/pair",
         "//third_party:com_google_inject_guice",
         "//third_party:io_vavr",
+        "@aggregation//:com_google_guava_guava",
     ],
 )
