--- a/src/aggregation/lib/src/main/java/se/tink/backend/aggregation/workers/worker/BUILD
+++ b/src/aggregation/lib/src/main/java/se/tink/backend/aggregation/workers/worker/BUILD
@@ -14,6 +14,7 @@ java_library(
         "//src/aggregation/aggregationcontroller_api/src/main/java/se/tink/backend/aggregation/aggregationcontroller",
         "//src/aggregation/api",
         "//src/aggregation/api/src/main/java/se/tink/backend/aggregation/cluster/identification",
+        "//src/libraries/agent-storage",
         "//src/aggregation/lib/src/main/java/se/tink/backend/aggregation/configuration",
         "//src/aggregation/lib/src/main/java/se/tink/backend/aggregation/events",
         "//src/aggregation/lib/src/main/java/se/tink/backend/aggregation/storage/database/daos",
