--- a/src/aggregation/lib/src/test/java/se/tink/backend/aggregation/workers/operation/BUILD
+++ b/src/aggregation/lib/src/test/java/se/tink/backend/aggregation/workers/operation/BUILD
@@ -17,6 +17,7 @@ junit_test(
         "//src/integration/credentials/src/main/java/se/tink/libraries/credentials/service",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/api",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/controllers",
+        "//src/libraries/agent-storage",
         "//src/libraries/cache",
         "//third_party:org_apache_curator_curator_framework",
         "//third_party:org_apache_curator_curator_recipes",
