--- a/src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/contexts/agent/BUILD
+++ b/src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/contexts/agent/BUILD
@@ -15,6 +15,7 @@ java_library(
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/eidasidentity/identity",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/logmasker",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/controllers/configuration/iface",
+        "//src/libraries/agent-storage",
         "//src/libraries/interaction_counter",
         "//src/libraries/interaction_counter/local",
         "//third_party:com_google_guava_guava",
