--- a/src/integration/lib/src/test/java/se/tink/backend/aggregation/agents/framework/context/BUILD
+++ b/src/integration/lib/src/test/java/se/tink/backend/aggregation/agents/framework/context/BUILD
@@ -27,12 +27,14 @@ java_library(
         "//src/integration/transfer:rpc",
         "//src/integration/user:rpc",
         "//src/libraries/account_data_cache",
+        "//src/libraries/agent-storage",
         "//src/libraries/i18n",
         "//third_party:com_fasterxml_jackson_core_jackson_core",
         "//third_party:com_fasterxml_jackson_core_jackson_databind",
         "//third_party:com_google_code_findbugs_jsr305",
         "//third_party:com_google_guava_guava",
         "//third_party:com_sun_jersey_jersey_core",
+        "//third_party:io_dropwizard_dropwizard_lifecycle",
         "//third_party:junit_junit",
         "//third_party:org_apache_curator_curator_framework",
         "//third_party:org_apache_httpcomponents_httpcore",
