--- a/src/integration/webdriver/src/main/java/se/tink/integration/webdriver/BUILD
+++ b/src/integration/webdriver/src/main/java/se/tink/integration/webdriver/BUILD
@@ -12,6 +12,7 @@ java_library(
     visibility = ["//visibility:public"],
     deps = [
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/utils/log",
+        "//src/libraries/agent-storage",
         "//third_party:com_google_guava_guava",
         "//third_party:lombok_libs",
         "//third_party:org_slf4j_slf4j_api",
