fix(java11): change certificate for AS with Java11

--- a/.charts/tink-backend-aggregation-java11/templates/deployment.yaml
+++ b/.charts/tink-backend-aggregation-java11/templates/deployment.yaml
@@ -462,7 +462,7 @@ spec:
           name: agents-config-java11
       - name: client-certificate-java11
         secret:
-          secretName: client-certificate-java11
+          secretName: client-certificate
       - name: bnppf-cert
         secret:
           secretName: bnppf-cert
