--- a/.charts/tink-backend-aggregation-java11/templates/aggregation-hpa.yaml
+++ b/.charts/tink-backend-aggregation-java11/templates/aggregation-hpa.yaml
@@ -9,7 +9,7 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: aggregation
+    name: aggregation-java11
   metrics:
   - type: Pods
     pods:
