--- a/src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/controllers/refresh/BUILD
+++ b/src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/controllers/refresh/BUILD
@@ -24,6 +24,7 @@ java_library(
         "//third_party:com_google_code_findbugs_jsr305",
         "//third_party:com_google_guava_guava",
         "//third_party:lombok_libs",
+        "//third_party:org_apache_commons_commons_lang3",
         "//third_party:org_slf4j_slf4j_api",
         "@tink_backend//src/libraries/account_identifier",
         "@tink_backend//src/libraries/unleash",
