--- a/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/be/openbanking/bpost/agent/BUILD
+++ b/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/be/openbanking/bpost/agent/BUILD
@@ -2,7 +2,7 @@ load("//tools/bzl:junit.bzl", "junit_test")
 
 junit_test(
     name = "bpost",
-    srcs = glob(["*.java"]),
+    srcs = glob(["**/*.java"]),
     data = ["//:agent_test_data"],
     tags = [
         "external",
@@ -15,9 +15,12 @@ junit_test(
         "//src/integration/amount",
         "//src/integration/api/src/main/java/se/tink/backend/agents/rpc",
         "//src/integration/lib",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/exceptions/bankservice",
         "//src/integration/lib/src/test/java/se/tink/backend/aggregation/agents/framework",
         "//src/integration/lib/src/test/java/se/tink/backend/aggregation/configuration",
         "//src/integration/payment:rpc",
+        "//third_party:junit_junit",
+        "//third_party:org_assertj_assertj_core",
         "//third_party:org_mockito_mockito_core",
         "@tink_backend//src/libraries/account_identifier",
     ],
