feat(java11): added ingress tls

--- a/.charts/tink-backend-aggregation-java11/templates/public-ingress.yaml
+++ b/.charts/tink-backend-aggregation-java11/templates/public-ingress.yaml
@@ -37,4 +37,4 @@ spec:
   - hosts:
     - aggregation2-java11.{{ .Values.Environment }}.{{ .Values.Cluster }}.tink.se
     - aggregation-java11.{{ .Values.Environment }}.{{ .Values.Cluster }}.tink.se
-    secretName: ingress-tls
+    secretName: ingress-tls-java11
