fix(WebDriver): Adjust agents to use AgentTemporaryStorage
[ITE-2966]

--- a/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/es/banks/bankinter/BUILD
+++ b/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/es/banks/bankinter/BUILD
@@ -29,6 +29,7 @@ junit_test(
         "//src/integration/lib/src/test/java/se/tink/backend/aggregation/agents/framework",
         "//src/integration/lib/src/test/java/se/tink/backend/aggregation/configuration",
         "//src/integration/models",
+        "//src/integration/webdriver/src/main/java/se/tink/integration/webdriver",
         "//src/libraries/date",
         "//src/libraries/serialization",
         "//third_party:org_assertj_assertj_core",
