--- a/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/no/banks/nordea/mock/BUILD
+++ b/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/no/banks/nordea/mock/BUILD
@@ -19,6 +19,7 @@ junit_test(
         "//src/integration/lib/src/test/java/se/tink/backend/aggregation/agents/framework/assertions",
         "//src/integration/lib/src/test/java/se/tink/backend/aggregation/agents/framework/compositeagenttest/wiremockrefresh",
         "//src/integration/lib/src/test/java/se/tink/backend/aggregation/nxgen/controllers/authentication/multifactor/no/nextbankid",
+        "//src/libraries/agent-storage",
         "//src/libraries/i18n",
         "//third_party:com_github_tomakehurst_wiremock",
         "//third_party:com_google_inject_guice",
