feat(aapConverter): improve readability and clear headers

--- a/src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/framework/wiremock/utils/parsingrules/parsingoperations/BUILD
+++ b/src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/framework/wiremock/utils/parsingrules/parsingoperations/BUILD
@@ -11,6 +11,7 @@ java_library(
     runtime_deps = [
     ],
     deps = [
+        "@aggregation//:com_google_code_gson_gson",
         "@aggregation//:com_google_guava_guava",
     ],
 )
