--- a/src/integration/credentials/src/main/java/se/tink/libraries/credentials/service/BUILD
+++ b/src/integration/credentials/src/main/java/se/tink/libraries/credentials/service/BUILD
@@ -7,6 +7,7 @@ java_library(
     deps = [
         "//src/integration/api/src/main/java/se/tink/backend/agents/rpc",
         "//src/integration/user:rpc",
+        "//src/libraries/request_tracing",
         "//third_party:com_fasterxml_jackson_core_jackson_annotations",
         "//third_party:com_google_guava_guava",
         "//third_party:commons_codec_commons_codec",
