--- a/src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/filter/filters/retry/BUILD
+++ b/src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/filter/filters/retry/BUILD
@@ -8,6 +8,7 @@ java_library(
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/exceptions/client",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/filter/filters",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/filter/filters/iface",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/filter/filters/randomretry",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/request",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/response",
         "//third_party:org_apache_commons_commons_lang3",
